feat: add chrome options config