@@ -1,5 +1,6 @@
 package com.pageload;
 
+import com.pageload.config.selenium.ChromeOptionsConfig;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.chrome.ChromeDriver;
 
@@ -7,10 +8,7 @@ import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Date;
-import java.util.List;
-import java.util.Scanner;
+import java.util.*;
 import java.util.logging.Logger;
 
 public class Main {
@@ -29,12 +27,12 @@ public class Main {
     System.out.println("Enter page paths (separated by commas): ");
     String paths = scanner.nextLine();
 
-    WebDriver driver = new ChromeDriver();
+    WebDriver driver = new ChromeDriver(ChromeOptionsConfig.prepareChromeOptions());
 
     List<List<Long>> pageLoadTimes = new ArrayList<>();
 
     for (String path : paths.split(",")) {
-      _logger.info("Running pageload test for path: %s...".formatted(path));
+      _logger.info(String.format("Running pageload test for path: %s...", path));
 
       String url = urlBase + path;
 
@@ -56,23 +54,24 @@ public class Main {
     File file = new File(resultsDir, filename);
 
     try (BufferedWriter bw = new BufferedWriter(new FileWriter(file))) {
+
       for (int i = 0; i < pageLoadTimes.size(); i++) {
+
         bw.write("Path: " + paths.split(",")[i] + "\n");
+
         for (int j = 0; j < pageLoadTimes.get(i).size(); j++) {
 
           bw.write("\n" + (j + 1) + ". " + pageLoadTimes.get(i).get(j) + " ms");
         }
+
         bw.write("\n\n");
 
-        long totalTime = 0;
-        for (Long tempo : pageLoadTimes.get(i)) {
-          totalTime += tempo;
-        }
-        long averageTime = totalTime / pageLoadTimes.get(i).size();
+        long averageTime = calculateAveragePageLoad(pageLoadTimes.get(i));
 
         bw.write("Average: " + averageTime + " ms\n");
         bw.write("\n");
       }
+
     }
 
     driver.quit();
@@ -80,5 +79,22 @@ public class Main {
     } catch (Exception ex) {
       _logger.severe("An unexpected error happened");
     }
+  }
+
+  private static long calculateAveragePageLoad(List<Long> pageLoadList) {
+    List<Long> pageLoadListCopy = new ArrayList<>(List.copyOf(pageLoadList));
+    Collections.sort(pageLoadListCopy);
+
+    //remove max and min values
+    pageLoadListCopy.remove(0);
+    pageLoadListCopy.remove(pageLoadListCopy.size() - 1);
+
+    long totalTime = 0;
+
+    for (Long tempo : pageLoadListCopy) {
+      totalTime += tempo;
+    }
+
+    return totalTime / pageLoadListCopy.size();
   }
 }
